--- a/BLcourse2.3/02_two_dim.ipynb
+++ b/BLcourse2.3/02_two_dim.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8c19b309",
+   "metadata": {},
+   "source": [
+    "In this notebook, we use a GP to fit a 2D data set."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b88a37d9",
@@ -147,6 +155,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c860aa4f",
+   "metadata": {},
+   "source": [
+    "Keep the settings below and explore the notebook till the end first."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0ec4ad3d",
@@ -166,22 +182,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6bec0f58",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##use_noise = True\n",
-    "##use_gap = False"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "865866ea",
+   "id": "9f0c3b31",
    "metadata": {},
    "source": [
-    "# Exercise 3"
+    "First complete the notebook as is, then come back here."
    ]
   },
   {
@@ -196,9 +201,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "865866ea",
+   "metadata": {},
+   "source": [
+    "# Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfd5d87b",
+   "metadata": {},
+   "source": [
+    "First complete the notebook with Exercise 2, then come back here."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6efe09b3",
+   "id": "f27dce89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##use_noise = True\n",
+    "##use_gap = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd8ac983",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +238,9 @@
     "    # noisy train data\n",
     "    noise_std = 0.2\n",
     "    noise_dist = torch.distributions.Normal(loc=0, scale=noise_std)\n",
-    "    y_train = data_train.z + noise_dist.sample_n(len(data_train.z))\n",
+    "    y_train = data_train.z + noise_dist.sample(\n",
+    "        sample_shape=(len(data_train.z),)\n",
+    "    )\n",
     "else:\n",
     "    # noise-free train data\n",
     "    noise_std = 0\n",
@@ -216,11 +250,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af637911",
+   "id": "59f6f6d6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cut out part of the train data to create out-of-distribution predictions\n",
+    "# Cut out part of the train data to create out-of-distribution predictions.\n",
+    "# Same as the \"gaps\" we created in the 1D case.\n",
     "\n",
     "if use_gap:\n",
     "    mask = (X_train[:, 0] > 0) & (X_train[:, 1] < 0)\n",
@@ -356,10 +391,10 @@
     "model.train()\n",
     "likelihood.train()\n",
     "\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=0.2)\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.15)\n",
     "loss_func = gpytorch.mlls.ExactMarginalLogLikelihood(likelihood, model)\n",
     "\n",
-    "n_iter = 300\n",
+    "n_iter = 400\n",
     "history = defaultdict(list)\n",
     "for ii in range(n_iter):\n",
     "    optimizer.zero_grad()\n",
@@ -367,7 +402,7 @@
     "    loss.backward()\n",
     "    optimizer.step()\n",
     "    if (ii + 1) % 10 == 0:\n",
-    "        print(f\"iter {ii+1}/{n_iter}, {loss=:.3f}\")\n",
+    "        print(f\"iter {ii + 1}/{n_iter}, {loss=:.3f}\")\n",
     "    for p_name, p_val in extract_model_params(model).items():\n",
     "        history[p_name].append(p_val)\n",
     "    history[\"loss\"].append(loss.item())"
@@ -411,9 +446,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "59e18623",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "model.eval()\n",
@@ -447,6 +480,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bff55240",
+   "metadata": {},
+   "source": [
+    "When `use_noise=False`, then the GP's prediction is an almost pefect\n",
+    "reconstruction of the ground truth function (in-distribution, so where we\n",
+    "have data)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "591e453d",
    "metadata": {},
    "source": [
@@ -460,7 +503,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ncols = 3\n",
+    "ncols = 4\n",
     "fig, axs = plt.subplots(ncols=ncols, nrows=1, figsize=(ncols * 7, 5))\n",
     "\n",
     "vmax = post_pred_y.stddev.max()\n",
@@ -477,27 +520,42 @@
     ")\n",
     "axs[0].set_title(\"|y_pred - y_true|\")\n",
     "\n",
+    "f_std = post_pred_f.stddev.reshape((data_pred.nx, data_pred.ny))\n",
+    "y_std = post_pred_y.stddev.reshape((data_pred.nx, data_pred.ny))\n",
+    "\n",
     "cs.append(\n",
     "    axs[1].contourf(\n",
     "        data_pred.XG,\n",
     "        data_pred.YG,\n",
-    "        post_pred_f.stddev.reshape((data_pred.nx, data_pred.ny)),\n",
+    "        f_std,\n",
     "        vmin=0,\n",
     "        vmax=vmax,\n",
     "    )\n",
     ")\n",
-    "axs[1].set_title(\"f_std (epistemic)\")\n",
+    "axs[1].set_title(\"epistemic: f_std\")\n",
     "\n",
     "cs.append(\n",
     "    axs[2].contourf(\n",
     "        data_pred.XG,\n",
     "        data_pred.YG,\n",
-    "        post_pred_y.stddev.reshape((data_pred.nx, data_pred.ny)),\n",
+    "        y_std,\n",
     "        vmin=0,\n",
     "        vmax=vmax,\n",
     "    )\n",
     ")\n",
-    "axs[2].set_title(\"y_std (epistemic + aleatoric)\")\n",
+    "axs[2].set_title(\"total: y_std\")\n",
+    "\n",
+    "cs.append(\n",
+    "    axs[3].contourf(\n",
+    "        data_pred.XG,\n",
+    "        data_pred.YG,\n",
+    "        y_std - f_std,\n",
+    "        vmin=0,\n",
+    "        cmap=\"plasma\",\n",
+    "        ##vmax=vmax,\n",
+    "    )\n",
+    ")\n",
+    "axs[3].set_title(\"aleatoric: y_std - f_std\")\n",
     "\n",
     "for ax, c in zip(axs, cs):\n",
     "    ax.set_xlabel(\"X_0\")\n",
@@ -511,7 +569,7 @@
    "id": "04257cea",
    "metadata": {},
    "source": [
-    "# Check learned noise"
+    "## Let's check the learned noise"
    ]
   },
   {
@@ -521,13 +579,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print((post_pred_y.stddev**2 - post_pred_f.stddev**2).mean().sqrt())\n",
+    "# Target noise to learn\n",
+    "print(\"data noise:\", noise_std)\n",
+    "\n",
+    "# The two below must be the same\n",
     "print(\n",
+    "    \"learned noise:\",\n",
+    "    (post_pred_y.stddev**2 - post_pred_f.stddev**2).mean().sqrt().item(),\n",
+    ")\n",
+    "print(\n",
+    "    \"learned noise:\",\n",
     "    np.sqrt(\n",
     "        extract_model_params(model, raw=False)[\"likelihood.noise_covar.noise\"]\n",
-    "    )\n",
-    ")\n",
-    "print(noise_std)"
+    "    ),\n",
+    ")"
    ]
   },
   {
@@ -535,7 +600,71 @@
    "id": "1da209ff",
    "metadata": {},
    "source": [
-    "# Plot confidence bands"
+    "# Observations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c52e65c1",
+   "metadata": {},
+   "source": [
+    "We have the following terms:\n",
+    "\n",
+    "* epistemic: `f_std` = $\\sqrt{\\diag\\test{\\ma\\Sigma}}$\n",
+    "* total: `y_std` = $\\sqrt{\\diag(\\test{\\ma\\Sigma} + \\sigma_n^2\\,\\ma I_N)}$\n",
+    "* aleatoric: we have two ways of representing it\n",
+    "  * from the likelihood: $\\sigma_n$\n",
+    "  * for plotting: we use `y_std` - `f_std`, this is $\\neq \\sigma_n$ because of the $\\sqrt{\\cdot}$\n",
+    "    above\n",
+    "\n",
+    "We can make the following observations:\n",
+    "\n",
+    "* Exercise 1: `use_noise=False`, `use_gap=False`\n",
+    "  * The epistemic uncertainty `f_std` is a good indicator\n",
+    "    of the (small) differences between model prediction and ground truth\n",
+    "  * The learned variance $\\sigma_n^2$, and hence the aleatoric uncertainty is\n",
+    "    near zero, which makes sense for noise-free data\n",
+    "* Exercise 2: `use_noise=False`, `use_gap=True`\n",
+    "  * When faced with out-of-distribution (OOD) data, the epistemic `f_std`\n",
+    "    clearly shows where the model will make wrong (less trustworthy)\n",
+    "    predictions\n",
+    "* Exercise 3: `use_noise=True`, `use_gap=True`\n",
+    "  * in-distribution (where we have data)\n",
+    "    * The distinction between\n",
+    "      epistemic and aleatoric in the way we define it is less meaningful,\n",
+    "      hence, `f_std` doesn't correlate well with `y_pred - y_true`. The\n",
+    "      reason is that the noise $\\sigma_n$ shows up in two parts: (a) in the\n",
+    "      equation of $\\test{\\ma\\Sigma}$ itself, so the \"epistemic\" uncertainty\n",
+    "      `f_std` = $\\sqrt{\\diag\\test{\\ma\\Sigma}}$ is bigger just because we have\n",
+    "      noise (regression) and (b) we add it in $\\sqrt{\\diag(\\test{\\ma\\Sigma} +\n",
+    "      \\sigma_n^2\\,\\ma I_N)}$ to get the total `y_std`\n",
+    "    * We learn the value of `noise_std` ($\\sigma_n$) quite well and add **its\n",
+    "      square** as a constant ($\\test{\\ma\\Sigma} + \\sigma_n^2\\,\\ma I_N$). The\n",
+    "      `y_std` plot looks like the `f_std` one, but shifted by a constant. But\n",
+    "      this is not the case because we compare standard deviations and not\n",
+    "      variances, hence `y_std` - `f_std` is not constant, and in particular\n",
+    "      $\\neq \\sigma_n$, but both are in the same numerical range (0.15 vs.\n",
+    "      0.2).\n",
+    "  * out-of-distribution: `f_std` (epistemic) dominates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08e949a2",
+   "metadata": {},
+   "source": [
+    "Exercises\n",
+    "\n",
+    "Go back up, switch on the settings for Exercise 2 and re-run the notebook.\n",
+    "Same with Exercise 3."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee89f26a",
+   "metadata": {},
+   "source": [
+    "# Bonus: plot confidence bands"
    ]
   },
   {
