Sync notebooks with py files

--- a/BLcourse2.3/01_one_dim.ipynb
+++ b/BLcourse2.3/01_one_dim.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "2a8ed8ae",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
     "# Notation\n",
     "$\\newcommand{\\ve}[1]{\\mathit{\\boldsymbol{#1}}}$\n",
@@ -23,6 +25,19 @@
     "We use 1D data, so in fact $\\ma X \\in\\mathbb R^{N\\times 1}$ is a vector, but\n",
     "we still denote the collection of all $\\ve x_i = x_i\\in\\mathbb R$ points with\n",
     "$\\ma X$ to keep the notation consistent with the slides."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a7cc3c8",
+   "metadata": {},
+   "source": [
+    "# About\n",
+    "\n",
+    "In this notebook, we explore the material presented in [the\n",
+    "slides](https://doi.org/10.6084/m9.figshare.25988176) with code, using the\n",
+    "[gpytorch](https://gpytorch.ai) library. We cover exact GP inference and\n",
+    "hyper parameter optimization using the marginal likelihood."
    ]
   },
   {
@@ -226,7 +241,7 @@
    "outputs": [],
    "source": [
     "# Default start hyper params\n",
-    "pprint(extract_model_params(model, raw=False))"
+    "pprint(extract_model_params(model))"
    ]
   },
   {
@@ -244,7 +259,7 @@
     "model.covar_module.outputscale = 1.0\n",
     "model.likelihood.noise_covar.noise = 1e-3\n",
     "\n",
-    "pprint(extract_model_params(model, raw=False))"
+    "pprint(extract_model_params(model))"
    ]
   },
   {
@@ -256,7 +271,7 @@
     "\n",
     "We sample a number of functions $f_m, m=1,\\ldots,M$ from the GP prior and\n",
     "evaluate them at all $\\ma X$ = `X_pred` points, of which we have $N=200$. So\n",
-    "we effectively generate samples from $p(\\predve f|\\ma X) = \\mathcal N(\\ve\n",
+    "we effectively generate samples from `pri_f` =  $p(\\predve f|\\ma X) = \\mathcal N(\\ve\n",
     "c, \\ma K)$. Each sampled vector $\\predve f\\in\\mathbb R^{N}$ represents a\n",
     "sampled *function* $f$ evaluated the $N=200$ points in $\\ma X$. The\n",
     "covariance (kernel) matrix is $\\ma K\\in\\mathbb R^{N\\times N}$. Its diagonal\n",
@@ -474,7 +489,7 @@
     "    optimizer.step()\n",
     "    if (ii + 1) % 10 == 0:\n",
     "        print(f\"iter {ii + 1}/{n_iter}, {loss=:.3f}\")\n",
-    "    for p_name, p_val in extract_model_params(model).items():\n",
+    "    for p_name, p_val in extract_model_params(model, try_item=True).items():\n",
     "        history[p_name].append(p_val)\n",
     "    history[\"loss\"].append(loss.item())"
    ]
@@ -488,11 +503,14 @@
    "source": [
     "# Plot hyper params and loss (negative log marginal likelihood) convergence\n",
     "ncols = len(history)\n",
-    "fig, axs = plt.subplots(ncols=ncols, nrows=1, figsize=(ncols * 5, 5))\n",
-    "for ax, (p_name, p_lst) in zip(axs, history.items()):\n",
-    "    ax.plot(p_lst)\n",
-    "    ax.set_title(p_name)\n",
-    "    ax.set_xlabel(\"iterations\")"
+    "fig, axs = plt.subplots(\n",
+    "    ncols=ncols, nrows=1, figsize=(ncols * 3, 3), layout=\"compressed\"\n",
+    ")\n",
+    "with torch.no_grad():\n",
+    "    for ax, (p_name, p_lst) in zip(axs, history.items()):\n",
+    "        ax.plot(p_lst)\n",
+    "        ax.set_title(p_name)\n",
+    "        ax.set_xlabel(\"iterations\")"
    ]
   },
   {
@@ -503,7 +521,7 @@
    "outputs": [],
    "source": [
     "# Values of optimized hyper params\n",
-    "pprint(extract_model_params(model, raw=False))"
+    "pprint(extract_model_params(model))"
    ]
   },
   {
@@ -548,7 +566,7 @@
     "    post_pred_f = model(X_pred)\n",
     "    post_pred_y = likelihood(model(X_pred))\n",
     "\n",
-    "    fig, axs = plt.subplots(ncols=2, figsize=(12, 5))\n",
+    "    fig, axs = plt.subplots(ncols=2, figsize=(14, 5), sharex=True, sharey=True)\n",
     "    fig_sigmas, ax_sigmas = plt.subplots()\n",
     "    for ii, (ax, post_pred, name, title) in enumerate(\n",
     "        zip(\n",
@@ -668,7 +686,9 @@
     "print(\n",
     "    \"learned noise:\",\n",
     "    np.sqrt(\n",
-    "        extract_model_params(model, raw=False)[\"likelihood.noise_covar.noise\"]\n",
+    "        extract_model_params(model, try_item=True)[\n",
+    "            \"likelihood.noise_covar.noise\"\n",
+    "        ]\n",
     "    ),\n",
     ")"
    ]
@@ -694,6 +714,18 @@
    "display_name": "bayes-ml-course",
    "language": "python",
    "name": "bayes-ml-course"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
