--- a/BLcourse2.3/02_two_dim.ipynb
+++ b/BLcourse2.3/02_two_dim.ipynb
@@ -5,7 +5,21 @@
    "id": "8c19b309",
    "metadata": {},
    "source": [
-    "In this notebook, we use a GP to fit a 2D data set."
+    "# About\n",
+    "\n",
+    "In this notebook, we use a GP to fit a 2D data set. We use the same ExactGP\n",
+    "machinery as in the 1D case and show how GPs can be used for 2D interpolation\n",
+    "(when data is free of noise) or regression (noisy data). Think of this as a\n",
+    "toy geospatial data setting. Actually, in geostatistics, Gaussian process\n",
+    "regression is known as [Kriging](https://en.wikipedia.org/wiki/Kriging).\n",
+    "$\\newcommand{\\ve}[1]{\\mathit{\\boldsymbol{#1}}}$\n",
+    "$\\newcommand{\\ma}[1]{\\mathbf{#1}}$\n",
+    "$\\newcommand{\\pred}[1]{\\rm{#1}}$\n",
+    "$\\newcommand{\\predve}[1]{\\mathbf{#1}}$\n",
+    "$\\newcommand{\\test}[1]{#1_*}$\n",
+    "$\\newcommand{\\testtest}[1]{#1_{**}}$\n",
+    "$\\DeclareMathOperator{\\diag}{diag}$\n",
+    "$\\DeclareMathOperator{\\cov}{cov}$"
    ]
   },
   {
@@ -61,7 +75,14 @@
     "lines_to_next_cell": 2
    },
    "source": [
-    "# Generate toy 2D data"
+    "# Generate toy 2D data\n",
+    "\n",
+    "Our ground truth function is $f(\\ve x) = \\sin(r) / r$ with $\\ve x =\n",
+    "[x_0,x_1] \\in\\mathbb R^2$ and the radial distance\n",
+    "$r=\\sqrt{\\ve x^\\top\\,\\ve x}$, also known as \"Mexican hat\" function, which is a\n",
+    "radial wave-like pattern which decays with distance from the center $\\ve\n",
+    "x=\\ve 0$. We generate data by random sampling 2D points $\\ve x_i$ and calculating\n",
+    "$y_i = f(\\ve x_i)$, optionally adding Gaussian noise further down."
    ]
   },
   {
@@ -291,6 +312,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b7ff9e6e",
+   "metadata": {},
+   "source": [
+    "The gray surface is the ground truth function. The blue points are the\n",
+    "training data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a00bf4e4",
    "metadata": {
     "lines_to_next_cell": 2
@@ -353,7 +383,7 @@
    "outputs": [],
    "source": [
     "# Default start hyper params\n",
-    "pprint(extract_model_params(model, raw=False))"
+    "pprint(extract_model_params(model))"
    ]
   },
   {
@@ -369,7 +399,7 @@
     "model.covar_module.outputscale = 8.0\n",
     "model.likelihood.noise_covar.noise = 0.1\n",
     "\n",
-    "pprint(extract_model_params(model, raw=False))"
+    "pprint(extract_model_params(model))"
    ]
   },
   {
@@ -403,7 +433,7 @@
     "    optimizer.step()\n",
     "    if (ii + 1) % 10 == 0:\n",
     "        print(f\"iter {ii + 1}/{n_iter}, {loss=:.3f}\")\n",
-    "    for p_name, p_val in extract_model_params(model).items():\n",
+    "    for p_name, p_val in extract_model_params(model, try_item=True).items():\n",
     "        history[p_name].append(p_val)\n",
     "    history[\"loss\"].append(loss.item())"
    ]
@@ -416,11 +446,14 @@
    "outputs": [],
    "source": [
     "ncols = len(history)\n",
-    "fig, axs = plt.subplots(ncols=ncols, nrows=1, figsize=(ncols * 5, 5))\n",
-    "for ax, (p_name, p_lst) in zip(axs, history.items()):\n",
-    "    ax.plot(p_lst)\n",
-    "    ax.set_title(p_name)\n",
-    "    ax.set_xlabel(\"iterations\")"
+    "fig, axs = plt.subplots(\n",
+    "    ncols=ncols, nrows=1, figsize=(ncols * 3, 3), layout=\"compressed\"\n",
+    ")\n",
+    "with torch.no_grad():\n",
+    "    for ax, (p_name, p_lst) in zip(axs, history.items()):\n",
+    "        ax.plot(p_lst)\n",
+    "        ax.set_title(p_name)\n",
+    "        ax.set_xlabel(\"iterations\")"
    ]
   },
   {
@@ -431,7 +464,7 @@
    "outputs": [],
    "source": [
     "# Values of optimized hyper params\n",
-    "pprint(extract_model_params(model, raw=False))"
+    "pprint(extract_model_params(model))"
    ]
   },
   {
@@ -483,9 +516,42 @@
    "id": "bff55240",
    "metadata": {},
    "source": [
-    "When `use_noise=False`, then the GP's prediction is an almost pefect\n",
+    "When `use_noise=False`, then the GP's prediction is an almost perfect\n",
     "reconstruction of the ground truth function (in-distribution, so where we\n",
-    "have data)."
+    "have data).\n",
+    "In this case, the plot makes the GP prediction look like a perfect\n",
+    "*interpolation* of the noise-free data, so $\\test{\\ve\\mu} = \\ve y$ at the\n",
+    "train points $\\test{\\ma X} = \\ma X$. This\n",
+    "would be true if our GP model had exactly zero noise, so the likelihood's\n",
+    "$\\sigma_n^2$ would be zero. However `print(model`)\n",
+    "\n",
+    "```\n",
+    "ExactGPModel(\n",
+    " (likelihood): GaussianLikelihood(\n",
+    "   (noise_covar): HomoskedasticNoise(\n",
+    "     (raw_noise_constraint): GreaterThan(1.000E-04)\n",
+    "   )\n",
+    " )\n",
+    " ...\n",
+    " ```\n",
+    "\n",
+    "shows that actually the min value is $10^{-4}$, so we technically always have\n",
+    "a regression setting, just with very small noise. The reason is that in the\n",
+    "GP equations, we have\n",
+    "\n",
+    "$$\\test{\\ve\\mu} = \\test{\\ma K}\\,\\left(\\ma K+\\sigma_n^2\\,\\ma I_N\\right)^{-1}\\,\\ve y$$\n",
+    "\n",
+    "where $\\sigma_n^2$ acts as a *regularization* parameter (also called \"jitter\n",
+    "term\" sometimes), which improves the\n",
+    "numerical stability of the linear system solve step\n",
+    "\n",
+    "$$\\left(\\ma K+\\sigma_n^2\\,\\ma I_N\\right)^{-1}\\,\\ve y\\:.$$\n",
+    "\n",
+    "Also we always keep $\\sigma_n^2$ as hyper parameter that we learn, and the\n",
+    "smallest value the hyper parameter optimization can reach is $10^{-4}$.\n",
+    "\n",
+    "While 3D plots are fun, they are not optimal for judging how well\n",
+    "the GP model represents the ground truth function."
    ]
   },
   {
@@ -493,7 +559,10 @@
    "id": "591e453d",
    "metadata": {},
    "source": [
-    "# Plot difference to ground truth and uncertainty"
+    "# Plot difference to ground truth and uncertainty\n",
+    "\n",
+    "Let's use contour plots to visualize the difference between GP prediction and\n",
+    "ground truth, as well as epistemic, total and aleatoric uncertainty."
    ]
   },
   {
@@ -504,7 +573,9 @@
    "outputs": [],
    "source": [
     "ncols = 4\n",
-    "fig, axs = plt.subplots(ncols=ncols, nrows=1, figsize=(ncols * 7, 5))\n",
+    "fig, axs = plt.subplots(\n",
+    "    ncols=ncols, nrows=1, figsize=(ncols * 5, 4), layout=\"compressed\"\n",
+    ")\n",
     "\n",
     "vmax = post_pred_y.stddev.max()\n",
     "cs = []\n",
@@ -590,7 +661,9 @@
     "print(\n",
     "    \"learned noise:\",\n",
     "    np.sqrt(\n",
-    "        extract_model_params(model, raw=False)[\"likelihood.noise_covar.noise\"]\n",
+    "        extract_model_params(model, try_item=True)[\n",
+    "            \"likelihood.noise_covar.noise\"\n",
+    "        ]\n",
     "    ),\n",
     ")"
    ]
@@ -631,20 +704,17 @@
     "* Exercise 3: `use_noise=True`, `use_gap=True`\n",
     "  * in-distribution (where we have data)\n",
     "    * The distinction between\n",
-    "      epistemic and aleatoric in the way we define it is less meaningful,\n",
+    "      epistemic and aleatoric uncertainty in the way we define it is less meaningful,\n",
     "      hence, `f_std` doesn't correlate well with `y_pred - y_true`. The\n",
     "      reason is that the noise $\\sigma_n$ shows up in two parts: (a) in the\n",
     "      equation of $\\test{\\ma\\Sigma}$ itself, so the \"epistemic\" uncertainty\n",
     "      `f_std` = $\\sqrt{\\diag\\test{\\ma\\Sigma}}$ is bigger just because we have\n",
     "      noise (regression) and (b) we add it in $\\sqrt{\\diag(\\test{\\ma\\Sigma} +\n",
     "      \\sigma_n^2\\,\\ma I_N)}$ to get the total `y_std`\n",
-    "    * We learn the value of `noise_std` ($\\sigma_n$) quite well and add **its\n",
-    "      square** as a constant ($\\test{\\ma\\Sigma} + \\sigma_n^2\\,\\ma I_N$). The\n",
-    "      `y_std` plot looks like the `f_std` one, but shifted by a constant. But\n",
-    "      this is not the case because we compare standard deviations and not\n",
+    "    * The `y_std` plot looks like the `f_std` one, but shifted by a constant.\n",
+    "      But this is not the case because we compare standard deviations and not\n",
     "      variances, hence `y_std` - `f_std` is not constant, and in particular\n",
-    "      $\\neq \\sigma_n$, but both are in the same numerical range (0.15 vs.\n",
-    "      0.2).\n",
+    "      $\\neq \\sigma_n$, but both are in the same numerical range (0.15 vs. 0.2).\n",
     "  * out-of-distribution: `f_std` (epistemic) dominates"
    ]
   },
@@ -653,7 +723,7 @@
    "id": "08e949a2",
    "metadata": {},
    "source": [
-    "Exercises\n",
+    "# Exercises\n",
     "\n",
     "Go back up, switch on the settings for Exercise 2 and re-run the notebook.\n",
     "Same with Exercise 3."
@@ -716,6 +786,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
