--- a/BLcourse2.3/03_one_dim_SVI.ipynb
+++ b/BLcourse2.3/03_one_dim_SVI.ipynb
@@ -246,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set new start hyper params\n",
+    "# Set new start hyper params (scalars only)\n",
     "model.mean_module.constant = 3.0\n",
     "model.covar_module.base_kernel.lengthscale = 1.0\n",
     "model.covar_module.outputscale = 1.0\n",
