Better VI theory part in 03_one_dim_SVI

--- a/BLcourse2.3/03_one_dim_SVI.ipynb
+++ b/BLcourse2.3/03_one_dim_SVI.ipynb
@@ -17,7 +17,8 @@
     "$\\newcommand{\\predve}[1]{\\mathbf{#1}}$\n",
     "$\\newcommand{\\test}[1]{#1_*}$\n",
     "$\\newcommand{\\testtest}[1]{#1_{**}}$\n",
-    "$\\newcommand{\\dd}{\\rm{d}}$\n",
+    "$\\newcommand{\\dd}{{\\rm{d}}}$\n",
+    "$\\newcommand{\\lt}[1]{_{\\text{#1}}}$\n",
     "$\\DeclareMathOperator{\\diag}{diag}$\n",
     "$\\DeclareMathOperator{\\cov}{cov}$"
    ]
@@ -264,14 +265,31 @@
    "source": [
     "# Fit GP to data: optimize hyper params\n",
     "\n",
-    "Now we optimize the GP hyper parameters by doing a GP-specific variational inference (VI),\n",
-    "where we optimize not the log marginal likelihood (ExactGP case),\n",
-    "but an ELBO (evidence lower bound) objective. The latter is a proxy for minimizing\n",
-    "the KL divergence between distributions, which in our case are the approximate\n",
+    "Now we optimize the GP hyper parameters by doing a GP-specific variational\n",
+    "inference (VI), where we don't maximize the log marginal likelihood (ExactGP\n",
+    "case), but an ELBO (\"evidence lower bound\") objective -- a lower bound on the\n",
+    "marginal likelihood (the \"evidence\"). In variational inference, an ELBO objective\n",
+    "shows up when minimizing the KL divergence between\n",
+    "an approximate and the true posterior\n",
+    "\n",
+    "$$\n",
+    "    p(w|y) = \\frac{p(y|w)\\,p(w)}{\\int p(y|w)\\,p(w)\\,\\dd w}\n",
+    "           = \\frac{p(y|w)\\,p(w)}{p(y)}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "  \\ve\\zeta^* = \\text{arg}\\min_{\\ve\\zeta} D\\lt{KL}(q_{\\ve\\zeta}(w)\\,\\Vert\\, p(w|y))\n",
+    "$$\n",
+    "\n",
+    "to obtain the optimal variational parameters $\\ve\\zeta^*$ to approximate\n",
+    "$p(w|y)$ with $q_{\\ve\\zeta^*}(w)$.\n",
+    "\n",
+    "In our case the two distributions are the approximate\n",
     "\n",
     "$$q_{\\ve\\zeta}(\\mathbf f)=\\int p(\\mathbf f|\\ve u)\\,q_{\\ve\\psi}(\\ve u)\\,\\dd\\ve u\\quad(\\text{\"variational strategy\"})$$\n",
     "\n",
-    "and the true $p(\\mathbf f|\\mathcal D)$ posterior over function values. We optimize with respect to\n",
+    "and the true $p(\\mathbf f|\\mathcal D)$ posterior over function values. We\n",
+    "optimize with respect to\n",
     "\n",
     "$$\\ve\\zeta = [\\ell, \\sigma_n^2, s, c, \\ve\\psi] $$\n",
     "\n",
